crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__number-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"-5\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                "-",
                                0..1,
                            ),
                            (
                                Number(
                                    (
                                        5.0,
                                        1..2,
                                    ),
                                ),
                                1..2,
                            ),
                        ),
                        1..2,
                    ),
                ),
                0..2,
            ),
        ),
        0..2,
    ),
]
