crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__number-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"001.00004\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                1.00004,
                                0..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ),
        0..9,
    ),
]
