crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__number.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                1.0,
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..1,
            ),
        ),
        0..1,
    ),
]
