crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__or-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"false or false or true\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Or(
                            (
                                Or(
                                    (
                                        Boolean(
                                            (
                                                false,
                                                0..5,
                                            ),
                                        ),
                                        0..5,
                                    ),
                                    (
                                        "or",
                                        6..8,
                                    ),
                                    (
                                        Boolean(
                                            (
                                                false,
                                                9..14,
                                            ),
                                        ),
                                        9..14,
                                    ),
                                ),
                                0..14,
                            ),
                            (
                                "or",
                                15..17,
                            ),
                            (
                                Boolean(
                                    (
                                        true,
                                        18..22,
                                    ),
                                ),
                                18..22,
                            ),
                        ),
                        0..22,
                    ),
                ),
                0..22,
            ),
        ),
        0..22,
    ),
]
