crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__parentheses.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"()\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Parentheses(
                                    (
                                        Error,
                                        1..1,
                                    ),
                                ),
                                0..2,
                            ),
                        ),
                        0..2,
                    ),
                ),
                0..2,
            ),
        ],
    ),
    [
        found end of input at 1..2 expected expression,
    ],
)
