crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__range.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1..2\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Range(
                            (
                                Number(
                                    (
                                        1.0,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        3..4,
                                    ),
                                ),
                                3..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
