crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__recovery-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"\n    5 + 5 +;\n    echo 10\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Add(
                                    (
                                        Add(
                                            (
                                                Number(
                                                    (
                                                        5.0,
                                                        5..6,
                                                    ),
                                                ),
                                                5..6,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        5.0,
                                                        9..10,
                                                    ),
                                                ),
                                                9..10,
                                            ),
                                        ),
                                        5..10,
                                    ),
                                    (
                                        Error,
                                        12..13,
                                    ),
                                ),
                                5..13,
                            ),
                        ),
                        5..13,
                    ),
                ),
                5..13,
            ),
            (
                Statement(
                    (
                        Echo(
                            (
                                "echo",
                                18..22,
                            ),
                            (
                                Number(
                                    (
                                        10.0,
                                        23..25,
                                    ),
                                ),
                                23..25,
                            ),
                        ),
                        18..25,
                    ),
                ),
                18..25,
            ),
        ],
    ),
    [
        found end of input at 12..13 expected expression,
    ],
)
